[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chip8_core = { path = "../chip8_core"}
js-sys = "0.3.58"
wasm-bindgen = "0.2.81"
web-sys = {version = "0.3.58", features = ["CanvasRenderingContext2d", "Document", "Element", "HtmlCanvasElement", "ImageData", "KeyboardEvent", "Window"]}

[lib]
crate-type = ["cdylib"]